--- a/misc/src/main/resources/templates/layout/west.html
+++ b/misc/src/main/resources/templates/layout/west.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-	caidan
-</body>
-</html>
+
+	<div class="easyui-accordion" data-options="fit:true,border:false">
+	<!-- 	<ul id="tree">
+		
+		</ul> -->
+		<div title="原料管理" data-options="selected:true,iconCls:'icon-yxgl'" style="padding: 10px">
+			<a href="javascript:openTab('营销机会管理','saleChanceManage.jsp','icon-yxjhgl')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-yxjhgl'" style="width: 150px">营销机会管理</a>
+			<a href="javascript:openTab('客户开发计划','cusdevplanManage.jsp','icon-khkfjh')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-khkfjh'" style="width: 150px">客户开发计划</a>
+		</div>
+		<div title="产品管理"  data-options="iconCls:'icon-khgl'" style="padding:10px;">
+			<a href="javascript:openTab('客户信息管理','customerManage.jsp','icon-khxxgl')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-khxxgl'" style="width: 150px;">客户信息管理</a>
+			<a href="javascript:openTab('客户流失管理','customerLossManage.jsp','icon-khlsgl')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-khlsgl'" style="width: 150px;">客户流失管理</a>
+		</div>
+	</div>
+
+	<script type="text/javascript">
+		function openTab(text,url,iconCls){
+			if($("#tabs").tabs("exists",text)){
+				$("#tabs").tabs("select",text);
+			}else{
+				var content="<iframe frameborder=0 scrolling='auto' style='width:100%;height:100%' src='${pageContext.request.contextPath}/page/"+url+"'></iframe>";
+				$("#tabs").tabs("add",{
+					title:text,
+					iconCls:iconCls,
+					closable:true,
+					content:content
+				});
+			}
+		}
+	</script>
