--- a/misc/src/main/resources/templates/layout/west.html
+++ b/misc/src/main/resources/templates/layout/west.html
@@ -4,8 +4,8 @@
 		
 		</ul> -->
 		<div title="原料管理" data-options="selected:true,iconCls:'icon-yxgl'" style="padding: 10px">
-			<a href="javascript:openTab('营销机会管理','saleChanceManage.jsp','icon-yxjhgl')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-yxjhgl'" style="width: 150px">营销机会管理</a>
-			<a href="javascript:openTab('客户开发计划','cusdevplanManage.jsp','icon-khkfjh')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-khkfjh'" style="width: 150px">客户开发计划</a>
+			<a href="javascript:openTab('原料管理','material','icon-yxjhgl')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-yxjhgl'" style="width: 150px">原料管理</a>
+			<a href="javascript:openTab('进货管理','purchase','icon-khkfjh')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-khkfjh'" style="width: 150px">进货管理</a>
 		</div>
 		<div title="产品管理"  data-options="iconCls:'icon-khgl'" style="padding:10px;">
 			<a href="javascript:openTab('客户信息管理','customerManage.jsp','icon-khxxgl')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-khxxgl'" style="width: 150px;">客户信息管理</a>
@@ -18,7 +18,7 @@
 			if($("#tabs").tabs("exists",text)){
 				$("#tabs").tabs("select",text);
 			}else{
-				var content="<iframe frameborder=0 scrolling='auto' style='width:100%;height:100%' src='${pageContext.request.contextPath}/page/"+url+"'></iframe>";
+				var content="<iframe frameborder=0 scrolling='auto' style='width:100%;height:100%' src='/tabs/"+url+"'></iframe>";
 				$("#tabs").tabs("add",{
 					title:text,
 					iconCls:iconCls,
