--- a/misc/src/main/resources/templates/index.html
+++ b/misc/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
 				<!-- <div th:if="${session.s_member} != null" th:text="${session.s_member.realName}" style="text-align:center;padding:10px;"></div>
 				<input type="text" readonly="readonly" id="createMan" name="createMan" class="easyui-validatebox" required="true" th:if="${session.s_member} != null" value="" th:value="${session.s_member.realName}" />
  -->			
- ssss
+ ssss  aaaa
  			</div>
 		</div>
 	</div>
