--- a/misc/src/main/resources/templates/page/material.html
+++ b/misc/src/main/resources/templates/page/material.html
@@ -25,10 +25,12 @@
 		<thead>
 			<tr>
 				<!-- <th field="cb" checkbox="true" align="center"></th> -->
-				<th data-options="field:'id',width:80,halign:'center'">编号</th>
-				<th data-options="field:'name',width:80,halign:'center'">原料名称</th>
-				<th data-options="field:'price',width:80,halign:'center'">单价(元)</th>
-				<th data-options="field:'unit',width:80,halign:'center'">单位</th>
+				<th data-options="field:'id',width:50,halign:'center'">编号</th>
+				<th data-options="field:'name',width:50,halign:'center'">原料名称</th>
+				<th data-options="field:'price',width:50,halign:'center'">单价(元)</th>
+				<th data-options="field:'unit',width:50,halign:'center'">单位</th>
+				<th data-options="field:'creatTime',width:50,halign:'center'">创建时间</th>
+				<th data-options="field:'updateTime',width:50,halign:'center'">修改时间</th>
 			</tr>
 		</thead>
 	</table>
@@ -39,36 +41,37 @@
 			<a href="javascript:deleteSaleChance()" class="easyui-linkbutton"iconCls="icon-remove" plain="true">删除</a>
 		</div>
 		<div>
-			&nbsp;原料名称：&nbsp;<input type="text" id="s_customerName" size="20"onkeydown="if(event.keyCode==13) searchSaleChance()" />
-			&nbsp;概要：&nbsp;<input type="text" id="s_overView" size="20"onkeydown="if(event.keyCode==13) searchSaleChance()" />
-			&nbsp;创建人：&nbsp;<input type="text" id="s_createMan" size="20"	onkeydown="if(event.keyCode==13) searchSaleChance()" />
-			&nbsp;分配状态：&nbsp;<select class="easyui-combobox" id="s_state"editable="false" panelHeight="auto">
+			&nbsp;原料名称：&nbsp;<input type="text" id="s_customerName" size="20"/>
+			&nbsp;概要：&nbsp;<input type="text" id="s_overView" size="20" />
+			&nbsp;创建人：&nbsp;<input type="text" id="s_createMan" size="20"	 />
+<!--			&nbsp;分配状态：&nbsp;<select class="easyui-combobox" id="s_state"editable="false" panelHeight="auto">
 				<option value="">请选择...</option>
 				<option value="0">未分配</option>
 				<option value="1">已分配</option>
-			</select> <a href="javascript:searchSaleChance()" class="easyui-linkbutton"iconCls="icon-search" plain="true">搜索</a>
+			</select>-->
+			<a href="javascript:searchSaleChance()" class="easyui-linkbutton"iconCls="icon-search" plain="true">搜索</a>
 		</div>
 		<div id="dlg" class="easyui-dialog"	style="width: 700px; height: 450px; padding: 10px 20px" closed="true" buttons="#dlg-buttons">
 
-			<form id="fm" method="post" action="/rawmaterial/insertRawMaterialInfo">
+			<form id="fm" method="post" >
 				<table cellspacing="8px">
 					<tr>
 						<td>原料名称：</td>
-						<td><input type="text" id="rawMaterialName" name="rawMaterialName"class="easyui-validatebox" required="true" />&nbsp;<font color="red">*</font></td>
+						<td><input type="text" id="rawMaterialName" name="rawMaterialName" class="easyui-validatebox" required="true" />&nbsp;<font color="red">*</font></td>
 					</tr>
 					<tr>
 						<td>原料单价：</td>
-						<td><input type="text" id="rawMaterialPrice" name="rawMaterialPrice" /></td>
+						<td><input type="text" id="rawMaterialPrice" name="rawMaterialPrice" class="easyui-validatebox" required="true" /></td>
 						<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 						<td>计量单位：</td>
-						<td><input class="easyui-combobox" id="rawMaterialUnit"name="rawMaterialUnit"data-options="panelHeight:'auto',editable:false,valueField:'unitId',textField:'unitName',url:'/unit/getunitinfo'" /></td>
+						<td><input class="easyui-combobox" id="rawMaterialUnit" name="rawMaterialUnit" data-options="panelHeight:'auto',editable:false,valueField:'unitId',textField:'unitName',url:'/unit/getunitinfo'" required="true"/></td>
 					</tr>
 					<tr>
 						<td>供货商：</td>
-						<td><input type="text" id="linkMan" name="linkMan" /></td>
+						<td><input type="text" id="linkMan" name="linkMan" class="easyui-validatebox" required="true"/></td>
 						<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 						<td>联系电话：</td>
-						<td><input type="text" id="linkPhone" name="linkPhone" /></td>
+						<td><input type="text" id="linkPhone" name="linkPhone" class="easyui-validatebox" required="true"/></td>
 					</tr>
 					<tr>
 						<td>创建人：</td>
@@ -89,8 +92,19 @@
 	
 	<script type="text/javascript">
 		function saveSaleChance() {
-			
-			$("#fm").form('submit');
+//            action="/rawmaterial/insertRawMaterialInfo"
+			$("#fm").form({
+				url: '/rawmaterial/insertRawMaterialInfo',
+				onSubmit: function () {
+
+                },
+				success: function () {
+					alert("成功")
+                }
+
+			});
+            $("#fm").submit();
+//            $("#fm").form('submit');
 			/* $("#dlg").dialog("close"); */
 		}
 		function closeSaleChanceDialog() {
