--- a/misc/src/main/resources/templates/page/material.html
+++ b/misc/src/main/resources/templates/page/material.html
@@ -4,9 +4,25 @@
 <link rel="stylesheet" type="text/css" href="/easyui/demo/demo.css">
 <link rel="stylesheet" type="text/css" href="/easyui/themes/icon.css">
 <script type="text/javascript" src="/easyui/jquery.min.js"></script>
+<script type="text/javascript" src="/js/dateUtil.js"></script>
 <script type="text/javascript" src="/easyui/jquery.easyui.min.js"></script>
 <script type="text/javascript" src="/easyui/locale/easyui-lang-zh_CN.js"></script>
 <script type="text/javascript">
+
+function formatDatebox(value) {  
+    if (value == null || value == '') {  
+        return '';  
+    }  
+    var dt;  
+    if (value instanceof Date) {  
+        dt = value;  
+    } else {  
+        dt = new Date(value);  
+    }  
+  
+    return dt.Format("yyyy-MM-dd hh:mm:ss"); //扩展的Date的format方法(上述插件实现)  
+}
+
 	function openSaleChanceAddDialog() {
 
 		$("#dlg").dialog("open").dialog("setTitle", "添加原料信息");
@@ -26,7 +42,7 @@
 				<th data-options="field:'name',width:50,halign:'center'">原料名称</th>
 				<th data-options="field:'price',width:50,halign:'center'">单价(元)</th>
 				<th data-options="field:'unit',width:50,halign:'center'">单位</th>
-				<th data-options="field:'creatTime',width:50,halign:'center'">创建时间</th>
+				<th data-options="field:'creatTime',width:50,halign:'center',formatter: formatDatebox">创建时间</th>
 				<th data-options="field:'updateTime',width:50,halign:'center'">修改时间</th>
 			</tr>
 		</thead>
