--- a/misc/src/main/resources/templates/layout/west.html
+++ b/misc/src/main/resources/templates/layout/west.html
@@ -6,6 +6,7 @@
 		
 		</ul> -->
 		<div title="原料管理" data-options="selected:true,iconCls:'icon-yxgl'" style="padding: 10px">
+			<a href="javascript:openTab('计量单位管理','measurementUnit','icon-khkfjh')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-khkfjh'" style="width: 150px">计量单位管理</a>
 			<a href="javascript:openTab('原料管理','material','icon-yxjhgl')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-yxjhgl'" style="width: 150px">原料管理</a>
 			<a href="javascript:openTab('进货管理','purchase','icon-khkfjh')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-khkfjh'" style="width: 150px">进货管理</a>
 		</div>
