--- a/misc/src/main/resources/templates/page/measurementUnit.html
+++ b/misc/src/main/resources/templates/page/measurementUnit.html
@@ -22,38 +22,24 @@ function formatDatebox(value) {
   
     return dt.Format("yyyy-MM-dd hh:mm:ss"); //扩展的Date的format方法(上述插件实现)  
 }
+function openSaleChanceAddDialog() {
 
-	function openSaleChanceAddDialog() {
-
-		$("#dlg").dialog("open").dialog("setTitle", "添加原料信息");
-		var t = new Date();
-		$("#createTime").val(t);
-		$("#createMan").val('admin');
-		
-		$.ajax({ 
-			 url:'/unit/getunitinfoList', 
-			 type:"GET", 
-			 dataType: "json", 
-			 success:function(data){ 
-				 $('#rawMaterialUnit').combobox({
-					 data : data,
-					 valueField:'unitId',
-					 textField:'unitName'
-					 });
-			} 
-		})
-		
-	}
+	$("#dlg").dialog("open").dialog("setTitle", "添加计量单位");
+	var t = new Date();
+	$("#createTime").val(t);
+	$("#createMan").val('admin');
+	
+}
 </script>
 </head>
 <body style="margin: 1px">
-	<table id="dg" title="原料管理" class="easyui-datagrid" fitColumns="true" pagination="true" rownumbers="true" fit="true" toolbar="#tb" url="/rawmaterial/getRawMaterialInfo">
+	<table id="dg" title="原料管理" class="easyui-datagrid" fitColumns="true" pagination="true" rownumbers="true" fit="true" toolbar="#tb" url="/unit/getunitinfoList">
 		<thead>
 			<tr>
-				<th data-options="field:'id',width:50,halign:'center'">编号</th>
-				<th data-options="field:'name',width:50,halign:'center'">原料名称</th>
-				<th data-options="field:'price',width:50,halign:'center'">单价(元)</th>
-				<th data-options="field:'unit',width:50,halign:'center'">单位</th>
+				<th data-options="field:'unitId',width:50,halign:'center'">计量单位编号</th>
+				<th data-options="field:'unitName',width:50,halign:'center'">计量单位名称</th>
+				<!-- <th data-options="field:'price',width:50,halign:'center'">单价(元)</th>
+				<th data-options="field:'unit',width:50,halign:'center'">单位</th> -->
 				<th data-options="field:'creatTime',width:50,halign:'center',formatter: formatDatebox">创建时间</th>
 				<th data-options="field:'updateTime',width:50,halign:'center'">最后一次修改时间</th>
 			</tr>
@@ -68,8 +54,6 @@ function formatDatebox(value) {
 		</div>
 		<div>
 			&nbsp;原料名称：&nbsp;<input type="text" id="s_customerName" size="20"/>
-			<!-- &nbsp;概要：&nbsp;<input type="text" id="s_overView" size="20" /> -->
-			<!-- &nbsp;创建人：&nbsp;<input type="text" id="s_createMan" size="20"	 /> -->
 			<a href="javascript:searchSaleChance()" class="easyui-linkbutton"iconCls="icon-search" plain="true">搜索</a>
 		</div>
 		<div id="dlg" class="easyui-dialog"	style="width: 700px; height: 450px; padding: 10px 20px" closed="true" buttons="#dlg-buttons">
@@ -77,22 +61,8 @@ function formatDatebox(value) {
 			<form id="fm" method="post" >
 				<table cellspacing="8px">
 					<tr>
-						<td>原料名称：</td>
-						<td><input type="text" id="rawMaterialName" name="rawMaterialName" class="easyui-validatebox" required="true" />&nbsp;<font color="red">*</font></td>
-					</tr>
-					<tr>
-						<td>原料单价：</td>
-						<td><input type="text" id="rawMaterialPrice" name="rawMaterialPrice" class="easyui-validatebox" required="true" /></td>
-						<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-						<td>计量单位：</td>
-						<td><input class="easyui-combobox" id="rawMaterialUnit" name="rawMaterialUnit" data-options="panelHeight:'auto',editable:false,valueField:'unitId',textField:'unitName',url:'/unit/getunitinfo'" required="true"/></td>
-					</tr>
-					<tr>
-						<td>供货商：</td>
-						<td><input type="text" id="linkMan" name="linkMan" class="easyui-validatebox" required="true"/></td>
-						<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-						<td>联系电话：</td>
-						<td><input type="text" id="linkPhone" name="linkPhone" class="easyui-validatebox" required="true"/></td>
+						<td>计量单位名称：</td>
+						<td><input type="text" id="unitName" name="unitName" class="easyui-validatebox" required="true" />&nbsp;<font color="red">*</font></td>
 					</tr>
 					<tr>
 						<td>创建人：</td>
@@ -114,7 +84,7 @@ function formatDatebox(value) {
 	<script type="text/javascript">
 		function saveSaleChance() {
 			$("#fm").form({
-				url: '/rawmaterial/insertRawMaterialInfo',
+				url: '/unit/insertunitInfo',
 				onSubmit: function () {
 
                 },
