计量单位页面、进货管理页面

--- a/misc/src/main/resources/templates/page/purchase.html
+++ b/misc/src/main/resources/templates/page/purchase.html
@@ -6,14 +6,61 @@
 <script type="text/javascript" src="/easyui/jquery.min.js"></script>
 <script type="text/javascript" src="/easyui/jquery.easyui.min.js"></script>
 <script type="text/javascript" src="/easyui/locale/easyui-lang-zh_CN.js"></script>
+<script type="text/javascript" src="/js/dateUtil.js"></script>
 <script type="text/javascript">
 function openSaleChanceAddDialog(){
-	 $("#dlg").dialog("open").dialog("setTitle","添加原料信息");
+	 $("#dlg").dialog("open").dialog("setTitle","进货信息");
 	 $("#createMan").val('${s_member.realName}');
-	 $("#createTime").val(getCurrentDateTime());
-	 url="/saleChance/save.do";
+	 $.ajax({ 
+		 url:'/rawmaterial/getRawMaterialInfo', 
+		 type:"GET", 
+		 dataType: "json", 
+		 success:function(data){ 
+			 $('#materialName').combobox({
+				 data : data,
+				 valueField:'id',
+				 textField:'name',
+				 onChange: function (id){
+					 getRawMaterial(id);
+				 }
+				 });
+		} 
+	})
+		 
 }
 
+function formatDatebox(value) {  
+    if (value == null || value == '') {  
+        return '';  
+    }  
+    var dt;  
+    if (value instanceof Date) {  
+        dt = value;  
+    } else {  
+        dt = new Date(value);  
+    }  
+  
+    return dt.Format("yyyy-MM-dd hh:mm:ss"); //扩展的Date的format方法(上述插件实现)  
+}
+function closeSaleChanceDialog() {
+	$("#dlg").dialog("close");
+}
+
+function getRawMaterial(id) {
+	$.ajax({ 
+		 url:'/rawmaterial/getRawMaterial/'+id, 
+		 type:"GET", 
+		 dataType: "json", 
+		 success:function(data){ 
+			 var unit = data.unit;
+			 var price = data.price;
+			 $("#materialUnit").val(unit);
+			 $("#materialPrice").val(price);
+			 $("#materialUnit").attr("","");
+			 
+		} 
+	})
+}
 
 </script>
 </head>
@@ -24,20 +71,20 @@ function openSaleChanceAddDialog(){
 			<tr>
 				<th field="cb" checkbox="true" align="center"></th>
 				<th data-options="field:'id',width:80,halign:'center'">编号</th>
-				<th data-options="field:'materialId',width:80,halign:'center',hidden:'true'">原料Id</th>
+				<th data-options="field:'materialId',width:80,halign:'center'">原料Id</th>
 				<th data-options="field:'materialName',width:80,halign:'center'">原料名称</th>
 				<th data-options="field:'price',width:80,halign:'center'">单价(元)</th>
 				<th data-options="field:'unit',width:80,halign:'center'">单位</th>
 				<th data-options="field:'purchaseNumber',width:80,halign:'center'">进货量</th>
 				<th data-options="field:'totlePrice',width:80,halign:'center'">总价(元)</th>
-				<th data-options="field:'creatTime',width:80,halign:'center'">进货时间</th>
+				<th data-options="field:'creatTime',width:120,halign:'center',formatter: formatDatebox">进货时间</th>
 				<th data-options="field:'creator',width:80,halign:'center'">进货人</th>
 			</tr>
 		</thead>
 	</table>
 	<div id="tb">
 	 	<div>
- 		<a href="javascript:openSaleChanceAddDialog()" class="easyui-linkbutton" iconCls="icon-add" plain="true">创建</a>
+ 		<a href="javascript:openSaleChanceAddDialog()" class="easyui-linkbutton" iconCls="icon-add" plain="true">进货</a>
  		<a href="javascript:openSaleChanceModifyDialog()" class="easyui-linkbutton" iconCls="icon-edit" plain="true">修改</a>
  		<a href="javascript:deleteSaleChance()" class="easyui-linkbutton" iconCls="icon-remove" plain="true">删除</a>
  		<a href="javascript:deleteSaleChance()" class="easyui-linkbutton" iconCls="icon-print" plain="true">打印</a>
@@ -60,46 +107,25 @@ function openSaleChanceAddDialog(){
    	<table cellspacing="8px">
    		<tr>
    			<td>原料名称：</td>
-   			<td><input type="text" id="customerName" name="customerName" class="easyui-validatebox" required="true"/>&nbsp;<font color="red">*</font></td>
+   			<td><select id="materialName" name="materialName" class="easyui-validatebox" required="true" style="width: 100px" >
+   				
+   			</select>&nbsp;<font color="red">*</font></td>
    			<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-   			<td>机会来源</td>
-   			<td><input type="text" id="chanceSource" name="chanceSource" /></td>
+   			<td>单位：</td>
+   			<td><input type="text" id="materialUnit" name="chanceSource" /></td>
    		</tr>
    		<tr>
-   			<td>联系人：</td>
-   			<td><input type="text" id="linkMan" name="linkMan" /></td>
+   			<td>单价：</td>
+   			<td><input type="text" id="materialPrice" name="linkMan" /></td>
    			<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-   			<td>联系电话：</td>
+   			<td>进货量：</td>
    			<td><input type="text" id="linkPhone" name="linkPhone" /></td>
    		</tr>
    		<tr>
-   			<td>成功几率(%)：</td>
-   			<td><input type="text" id="cgjl" name="cgjl" class="easyui-numberbox" data-options="min:0,max:100" required="true"/>&nbsp;<font color="red">*</font></td>
-   			<td colspan="3">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-   		</tr>
-   		<tr>
    			<td>概要：</td>
-   			<td colspan="4"><input type="text" id="overView" name="overView" style="width: 420px"/></td>
-   		</tr>
-   		<tr>
-   			<td>机会描述：</td>
    			<td colspan="4">
    				<textarea rows="5" cols="50" id="description" name="description"></textarea>
    			</td>
-   		</tr>
-   		<tr>
-   			<td>创建人：</td>
-   			<td><input type="text" readonly="readonly" id="createMan" name="createMan" class="easyui-validatebox" required="true"/>&nbsp;<font color="red">*</font></td>
-   			<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-   			<td>创建时间：</td>
-   			<td><input type="text" id="createTime" name="createTime" readonly="readonly"/>&nbsp;<font color="red">*</font></td>
-   		</tr>
-   		<tr>
-   			<td>指派给：</td>
-   			<td><input class="easyui-combobox" id="assignMan" name="assignMan" data-options="panelHeight:'auto',editable:false,valueField:'trueName',textField:'trueName',url:'${pageContext.request.contextPath}/user/customerManagerComboList.do'"/></td>
-   			<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-   			<td>指派时间：</td>
-   			<td><input type="text" id="assignTime" name="assignTime" readonly="readonly"/></td>
    		</tr>
    	</table>
    </form>
